search page work started

--- a/src/app/features/user/home/page-home-components/home-banner/home-banner.component.html
+++ b/src/app/features/user/home/page-home-components/home-banner/home-banner.component.html
@@ -10,13 +10,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/image/recommended/rec-music.jpeg" class="d-block w-100" alt="...">
+                <img src="" class="d-block id_one w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="assets/image/recommended/rec-beats.jpeg" class="d-block w-100" alt="...">
+                <img src="" class="d-block id_two w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="assets/image/recommended/car-music.jpeg" class="d-block w-100" alt="...">
+                <img src="" class="d-block id_three w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
