--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -1,1 +1,5 @@
-<p>page-search works!</p>
+<p class="ms-4 ps-2" >Top Searches</p>
+<div class="container d-flex mt-2">
+        <div class=" banner bg-danger mx-auto text-center">Bollywood</div>
+        <div class=" banner bg-success mx-auto text-center">Global Hits</div>
+</div>
