--- a/src/app/features/user/home/page-home-components/home-banner/home-banner.component.html
+++ b/src/app/features/user/home/page-home-components/home-banner/home-banner.component.html
@@ -1,4 +1,4 @@
-<div class="carousel_container">
+<div class="carousel">
     <div id="carouselExampleIndicators" class="carousel slide h-25" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
