--- a/src/app/shared/global-components/music-card/music-card.component.html
+++ b/src/app/shared/global-components/music-card/music-card.component.html
@@ -1,6 +1,6 @@
 <div class="card card_container p-1">
     <img src=" {{urlpath}} " alt="img" />
-    <button type="button" class="play_btn p-2">
+    <button type="button" class="play_btn animate__animated animate__fadeInUp animate__delay-1 animate__faster">
         <!-- <i class="fa fa-play-circle" aria-hidden="true"></i> -->
         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
             preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32">
