--- a/src/app/shared/global-components/music-card/music-card.component.scss
+++ b/src/app/shared/global-components/music-card/music-card.component.scss
@@ -19,13 +19,15 @@
 }
 .play_btn{
 	position: absolute;
+    padding: 10px 12px;
     z-index: 2;
     top: 90px;
     display: none;
     left: 90px;
     border: 0;
     border-radius: 50%;
-    background-color: ece9e6;
+    background-color: #ece9e6;
+    // animation: fadeIn linear 500ms;
     svg{
         font-size: 22px;
         color: #f12711;
@@ -43,3 +45,7 @@
     }
 }
 
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
