--- a/src/app/features/user/home/page-home/page-home.component.scss
+++ b/src/app/features/user/home/page-home/page-home.component.scss
@@ -2,6 +2,6 @@
     padding: 10px;
     background-color: var(--theme-bg);
     border-radius: 20px;
-    height: 100%;
+    min-height: 100%;
     // box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
