--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 // @import '~bootstrap/dist/css/bootstrap.min.css';
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+@import 'animate.css';
 
 
 :root {
@@ -18,5 +19,5 @@
 body {
     font-family: var(--body-font);
     color: var(--body-color);
-    // background-color: rgba(18, 21, 39, 0.86);
+    background-color: var(--theme-bg);
    }
