--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -1,5 +1,48 @@
-<p class="ms-4 ps-2" >Top Searches</p>
+<!-- <p class="ms-4 ps-2" >Top Searches</p>
 <div class="container d-flex mt-2">
         <div class=" banner bg-danger mx-auto text-center">Bollywood</div>
         <div class=" banner bg-success mx-auto text-center">Global Hits</div>
-</div>
+</div> -->
+<section class="section">
+    <h2 class="title">heading - 1</h2>
+    <div class="section--body">
+        <div class="section--body--item section--body--item--lg category--item">
+            <a href="#">
+                <h3>Hip Hop</h3>
+                <img src="http://via.placeholder.com/150x150" alt="">
+            </a>
+        </div>
+        <div class="section--body--item section--body--item--lg category--item">
+            <a href="#">
+                <h3>Pop</h3>
+                <img src="http://via.placeholder.com/150x150" alt="">
+            </a>
+        </div>
+    </div>
+</section>
+<!-- Section with small category cards -->
+<section class="section">
+    <h2 class="title">heading - 2</h2>
+    <div class="section--body">
+        <div class="section--body--item category--item">
+            <a href="#">
+                <h3>Podcast</h3>
+                <img src="http://via.placeholder.com/150x150" alt="">
+            </a>
+        </div>
+
+        <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
+            <a href="#">
+                <h3>Ειδικά για εσένα</h3>
+                <img src="http://via.placeholder.com/150x150" alt="">
+            </a>
+        </div>
+
+        <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
+            <a href="#">
+                <h3>Νέες Κυκλοφορίες</h3>
+                <img src="http://via.placeholder.com/150x150" alt="">
+            </a>
+        </div>
+    </div>
+</section>
