--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -33,14 +33,14 @@
 
         <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
             <a href="#">
-                <h3>Ειδικά για εσένα</h3>
-                <img src="http://via.placeholder.com/150x150" alt="">
+                <h3>extra 1</h3>
+                <img src="assets/image/hindi-party/bollywood-rock.jpeg" alt="">
             </a>
         </div>
 
         <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
             <a href="#">
-                <h3>Νέες Κυκλοφορίες</h3>
+                <h3>extra 2</h3>
                 <img src="http://via.placeholder.com/150x150" alt="">
             </a>
         </div>
