--- a/src/app/shared/layout/layout-components/home-header/home-header.component.scss
+++ b/src/app/shared/layout/layout-components/home-header/home-header.component.scss
@@ -86,18 +86,21 @@
     margin: 10px 0 0 0;
     padding: 0;
     width: 160px;
-    background-color: var(--video-bg);
+    background-color: var(--theme-bg);
     border-radius: 5px;
-    box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.5);
+    // box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, 
+        rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+        rgba(0, 0, 0, 0.07) 0px 16px 16px;
     li {
         padding-left: 40px;
         font-size: 0.9rem;
-        border-bottom: 1px solid rgb(64, 64, 64);
+        // border-bottom: 1px solid rgb(64, 64, 64);
         color: #b3b3b3;
         user-select: none;
         height: 40px;
         line-height: 40px;
-        a{
+        a {
             text-decoration: none;
         }
     }
@@ -116,11 +119,10 @@
 }
 
 .menu-item:hover {
-
-.drop-menu {
-    display: block;
-} 
-#cog-icon{
+    .drop-menu {
+        display: block;
+    }
+    #cog-icon {
         color: #fff;
     }
 }
