--- a/src/app/shared/global-components/play-bar/play-bar.component.html
+++ b/src/app/shared/global-components/play-bar/play-bar.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="bottom-bar">
     <div class="bottom-bar--left-col">
         <div class="bottom-bar--left-col--song">
@@ -20,7 +18,7 @@
         </div>
         <div class="bottom-bar--left-col--actions">
             <button class="bottom-bar--left-col--actions--favorite">
-                <i class='lni lni-heart'></i>
+                <i class='fa fa-heart'></i>
             </button>
             <button class="bottom-bar--left-col--actions--pip">
                 <i class="pip-icon"></i>
