--- a/src/app/shared/global-components/play-bar/play-bar.component.scss
+++ b/src/app/shared/global-components/play-bar/play-bar.component.scss
@@ -1,12 +1,12 @@
-.sidebar {
-  height: calc(100% - 90px); /* 90px is the height of the bottom bar */
-}
+// .sidebar {
+//   height: calc(100% - 90px); /* 90px is the height of the bottom bar */
+// }
 
 .bottom-bar {
   width: 100%;
-  height: 90px;
-  border-top: 1px solid #000;
-  background-color: rgba(24, 24, 24, 1);
+  height: 80px;
+  border-top: 1px solid var(--body-color);
+  background-color: var(--theme-bg);
   z-index: 1;
   position: absolute;
   bottom: 0;
@@ -56,6 +56,9 @@
   justify-content: center;
   font-size: 0.75rem;
   color: #b3b3b3;
+  i{
+    font-size: 16px;
+  }
 }
 
 .bottom-bar--left-col--song--img--pull-up:hover {
