--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -4,7 +4,7 @@
         <div class=" banner bg-success mx-auto text-center">Global Hits</div>
 </div> -->
 <section class="section">
-    <h2 class="title">heading - 1</h2>
+    <h2 class="title">Your top genres</h2>
     <div class="section--body">
         <div class="section--body--item section--body--item--lg category--item">
             <a href="#">
@@ -14,7 +14,7 @@
         </div>
         <div class="section--body--item section--body--item--lg category--item">
             <a href="#">
-                <h3>Pop</h3>
+                <h3>Bollywood</h3>
                 <img src="http://via.placeholder.com/150x150" alt="">
             </a>
         </div>
@@ -22,27 +22,29 @@
 </section>
 <!-- Section with small category cards -->
 <section class="section">
-    <h2 class="title">heading - 2</h2>
+    <h2 class="title">Browse all</h2>
     <div class="section--body">
         <div class="section--body--item category--item">
             <a href="#">
-                <h3>Podcast</h3>
+                <h3>Made For You</h3>
                 <img src="http://via.placeholder.com/150x150" alt="">
             </a>
         </div>
 
         <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
             <a href="#">
-                <h3>extra 1</h3>
+                <h3>New Releases</h3>
                 <img src="assets/image/hindi-party/bollywood-rock.jpeg" alt="">
             </a>
         </div>
 
         <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
             <a href="#">
-                <h3>extra 2</h3>
+                <h3>Discover</h3>
                 <img src="http://via.placeholder.com/150x150" alt="">
             </a>
         </div>
     </div>
 </section>
+
+<app-page-album></app-page-album>
