--- a/src/app/shared/global-components/play-bar/play-bar.component.scss
+++ b/src/app/shared/global-components/play-bar/play-bar.component.scss
@@ -1,169 +1,157 @@
-// .sidebar {
-//   height: calc(100% - 90px); /* 90px is the height of the bottom bar */
-// }
+$main-color-darker: #1DBA54;
+$main-color: #1ED761;
+@mixin flex-justify-btw{
+	display: flex;
+	justify-content:space-between;
+}
+input[type="range"] {
+	width: 100%;
+ 	outline: none;
+	padding: 0;
+	height: 4px;
+	background-color: #404040;
+	background-image: linear-gradient(#b3b3b3, #b3b3b3);
+	background-repeat: no-repeat;
+	border-radius: 10px;
+	cursor: pointer;
+	-webkit-appearance: none;
+}
+input[type=range]::-webkit-slider-thumb {
+	width: 12px;
+	height: 12px;
+	border: 0;
+	background: #fff;
+	border-radius: 100%;
+	box-shadow: 0 0 1px 0px rgba(0,0,0,0.1);
+	-webkit-appearance: none;
+	opacity:0
+}
+input[type="range"]:hover{
+	background-image: linear-gradient($main-color-darker, $main-color-darker);
+}
+input[type=range]:hover::-webkit-slider-thumb {
+  opacity:1;
+}
 
-.bottom-bar {
-  width: 100%;
-  height: 80px;
+ul{
+  list-style: none;
+}
+.playbar{
+	display: flex;
+	width: 100%; 
+	height: 86px;
+	padding: 18px 16px 12px;
+	background-color: var(--theme-bg);
   border-top: 1px solid var(--body-color);
-  background-color: var(--theme-bg);
-  z-index: 1;
-  position: absolute;
-  bottom: 0;
-  padding-left: 16px;
-  padding-right: 16px;
-  display: flex;
+	box-sizing: border-box;
 }
-.bottom-bar--left-col {
-  display: flex;
-  align-items: center;
-  position: relative;
-  transition: left 300ms;
-  left: 0;
-}
+// playbar - album cover and info
+.album-cover{
+    min-width: 280px;
+	display: flex;
+    flex:1;
+    
+    &__img{
+        width: 56px;
+        height: 56px;
+        background: url(https://i.scdn.co/image/ab67616d00001e02a00bcbae89bf421636fdd310);
+        background-size: cover;
+    }
+    &__text-box{
+        padding: 0 10px;
+    }
+    &__wrap{
+        display: flex;
+        line-height:2.4;
+    }
+    &__title{
+        color:#fff;
 
-.bottom-bar--left-col--song {
-  display: flex;
-}
+        &:hover{
+            text-decoration: underline;
+        }
+    }
+    &__icon-box{
+        margin-left:20px;
+    }
+    &__icons{
+        margin:-2px 0 0 4px;
+    }
+    &__artist{
+        font-size: 11px;
 
-.bottom-bar--left-col--song--img img {
-  height: 56px;
-  width: 56px;
+        &:hover{
+            color: #fff;
+            text-decoration: underline;
+        }
+    }
 }
-.bottom-bar--left-col--song--img img {
-  height: 56px;
-  width: 56px;
-  box-shadow: 0 10px 30px 0 rgba(0,0,0,.3), 0 1px 2px 0 rgba(0,0,0,.2);
-}
+// playbar - play buttons 
+.play-btns{
+	width: 100%;
+	min-width: 342px;
+	flex:3;
+    
+    &__wrap{
+        @include flex-justify-btw;
+    }
+    &__icon-box{
+        width: 218px;
+        margin: auto;
+        font-size: 14px;
+        line-height: 32px;
+    }
+    &__list:hover{
+        color: #fff;
 
-.bottom-bar--left-col--song--img {
-  margin-right: 14px;
-  display: flex;
-  position: relative;
+        .fa-play-circle{
+            color: #fff;
+            transform: scale(1.05);
+        }
+    }
+    &__icon.fa-play-circle{
+        color: #e5e5e5;
+        font-size: 32px;
+    }
+    &__range-bar{
+        width: 84%;
+        margin: auto;
+        font-size: 11px;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+    &__bar{
+        flex: 2;
+        padding: 0 20px;
+    }
 }
+// playbar - other buttons(right side) 
+.ect-btns{
+	max-width: 228px;
+	min-width: 228px;
+	flex:1;
+	font-size: 14px;
+    
+    &__inner{
+        @include flex-justify-btw;
+        padding-left: 18px;
+    }
+    &__list{
+        line-height: 56px;
 
-.bottom-bar--left-col--song--img--pull-up {
-  position: absolute;
-  top: 4px;
-  right: 4px;
-  background: #000;
-  width: 24px;
-  height: 24px;
-  opacity: 0.7;
-  border-radius: 50%;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.75rem;
-  color: #b3b3b3;
-  i{
-    font-size: 16px;
-  }
-}
-
-.bottom-bar--left-col--song--img--pull-up:hover {
-  /* Hovering over the arrow icon makes it bigger and brighter */
-  opacity: 0.8;
-  transform: scale(1.1);
-  color: #fff;
-}
-
-.bottom-bar--left-col--song--img:hover .bottom-bar--left-col--song--img--pull-up {
-  /* Hovering over the image reveals the arrow icon */
-  display: flex;
-}
-.bottom-bar--left-col--song--details {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  margin-right: 14px;
-}
-
-.bottom-bar--left-col--song--details--wrapper {
-  display: block;
-  line-height: 17px;
-}
-
-.bottom-bar--left-col--song--details a {
-  display: inline;
-  text-decoration: none;
-  color: #fff;
-  letter-spacing: 0;
-}
-
-.bottom-bar--left-col--song--details a:hover {
-  color: #fff;
-  /* Border-bottom instead of text-decoration: underline */
-  border-bottom: 1px solid #fff;
-}
-
-.bottom-bar--left-col--song--details--title {
-  font-size: 0.875rem;
-}
-
-.bottom-bar--left-col--song--details--artist {
-  font-size: 0.75rem;
-}
-.bottom-bar--left-col--actions {
-  display: flex;
-  align-items: center;
-}
-
-.bottom-bar--left-col--actions--favorite {
-  background: transparent;
-  border: 0;
-  outline: 0;
-  color: #b3b3b3;
-  font-size: 1rem;
-  margin-right: 10px;
-}
-
-.bottom-bar--left-col--actions--favorite:hover {
-  color: #fff;
-}
-.bottom-bar--left-col--actions--pip {
-  background: transparent;
-  border: 0;
-  outline: 0;
-  position: relative;
-  /* Width and height will be the actual size of the PiP icon */
-  width: 16px;
-  height: 13px;
-  padding: 0;
-}
-
-/* The outside of the PiP icon, the Rectangle part of the icon */
-.pip-icon {
-  border: 1px solid;
-  border-bottom: 2px solid;
-  border-radius: 1px;
-  border-color: #b3b3b3;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-/* 
-  The small rectangle of the PiP icon 
-  that is on filled and is on the bottom right corner of the icon 
-*/
-.pip-icon:before {
-  content: '';
-  position: absolute;
-  bottom: 1px;
-  right: 1px;
-  height: 3px;
-  width: 5px;
-  background: #b3b3b3;
-  border-radius: 1px;
-}
-
-.bottom-bar--left-col--actions--pip:hover .pip-icon {
-  border-color: #fff;
-}
-
-.bottom-bar--left-col--actions--pip:hover .pip-icon:before {
-  background: #fff;
+        &:hover .ect-btns__icon{
+            color: #fff;
+        }
+        &--volume{
+            display: flex;
+        }
+    }
+    &__icon{
+        padding-right: 6px;
+        line-height: 56px;
+    }
+    &__bar{
+        width: 74px;
+        margin-top: -3px;
+    }
 }
