--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,15 @@ body {
     color: var(--body-color);
     background-color: var(--theme-bg);
    }
+
+//scroll bar
+::-webkit-scrollbar{
+	width: 8px;	
+}
+::-webkit-scrollbar-track{
+	background:transparent;
+}
+::-webkit-scrollbar-thumb{
+	background:#535353;
+	border-radius:5px;
+}
