UI changes added.

--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -1,9 +1,5 @@
-<!-- <p class="ms-4 ps-2" >Top Searches</p>
-<div class="container d-flex mt-2">
-        <div class=" banner bg-danger mx-auto text-center">Bollywood</div>
-        <div class=" banner bg-success mx-auto text-center">Global Hits</div>
-</div> -->
-<section class="section">
+
+<!-- <section class="section">
     <h2 class="title">Your top genres</h2>
     <div class="section--body">
         <div class="section--body--item section--body--item--lg category--item">
@@ -19,9 +15,8 @@
             </a>
         </div>
     </div>
-</section>
-<!-- Section with small category cards -->
-<section class="section">
+</section> -->
+<!-- <section class="section">
     <h2 class="title">Browse all</h2>
     <div class="section--body">
         <div class="section--body--item category--item">
@@ -45,6 +40,6 @@
             </a>
         </div>
     </div>
-</section>
+</section> -->
 
 <app-page-album></app-page-album>
