--- a/src/app/shared/global-components/page-album/page-album.component.html
+++ b/src/app/shared/global-components/page-album/page-album.component.html
@@ -1,23 +1,7 @@
 <div class="wrap">
     <div class="list-area">
-        
         <div class="main">
-            <div class="main__wrap top-scroll-bg"></div>
-            <div class="main__wrap top-bar">
-                <ul class="top-bar__left top-bar__wrap">
-                    <li><i class="top-bar__icon fas fa-chevron-left"></i></li>
-                    <li><i class="top-bar__icon fas fa-chevron-right"></i></li>
-                    <li class="top-bar__search">
-                        <i class="top-bar__search--icon top-bar__icon fas fa-search"></i>
-                        <input type="text" class="top-bar__search--input" placeholder="Search">
-                    </li>
-                </ul>
-                <ul class="top-bar__right top-bar__wrap">
-                    <li><i class="top-bar__icon top-bar__right--user-icon far fa-user-circle"></i></li>
-                    <li>Kelly</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
-            </div>
+            <!-- <div class="main__wrap top-scroll-bg"></div> -->
             <div class="main__wrap summary">
                 <div class="summary__img"></div>
                 <div class="summary__box">
@@ -30,7 +14,8 @@
                                 <strong class="summary__text--title">Discover Weekly</strong>
                             </li>
                             <li>
-                                <p class="will-hidden">Your weekly mixtape of fresh music. Enjoy new discoveries and deep cuts chosen just for you. Updated every Monday, so save your favorites!</p>
+                                <p class="will-hidden">Your weekly mixtape of fresh music. Enjoy new discoveries and
+                                    deep cuts chosen just for you. Updated every Monday, so save your favorites!</p>
                             </li>
                             <li class="summary__text--by-spotify">
                                 <p>Made for <span class="summary__text--white ">Kelly</span> by <span
@@ -44,8 +29,8 @@
                             <li class="button__list button__play-btn">
                                 <p class="button__text">PLAY</p>
                             </li>
-                            <li class="button__list"><i class="button__icon far fa-heart"></i></li>
-                            <li class="button__list"><i class="button__icon fas fa-ellipsis-h"></i></li>
+                            <li class="button__list"><i class="button__icon fa fa-heart"></i></li>
+                            <li class="button__list"><i class="button__icon fa fa-ellipsis-h"></i></li>
                         </ul>
                     </div>
                 </div>
@@ -65,14 +50,14 @@
                             <li class="button__list button__play-btn">
                                 <p class="button__text">PLAY</p>
                             </li>
-                            <li class="button__list"><i class="button__icon far fa-heart"></i></li>
-                            <li class="button__list"><i class="button__icon fas fa-ellipsis-h"></i></li>
+                            <li class="button__list"><i class="button__icon fa fa-heart"></i></li>
+                            <li class="button__list"><i class="button__icon fa fa-ellipsis-h"></i></li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="main__wrap">
-                <table class="playlist">
+            <div class="main__wrap mt-3">
+                <table class="playlist ">
                     <colgroup>
                         <col width="3%">
                         <col width="3%">
@@ -395,58 +380,6 @@
                     </tr>
                 </table>
             </div>
-        </div>
-    </div>
-    <div class="playbar">
-        <div class="album-cover">
-            <div class="album-cover__img"></div>
-            <div class="album-cover__text-box">
-                <div class="album-cover__wrap">
-                    <p class="album-cover__title">Morning Sun</p>
-                    <div class="album-cover__icon-box">
-                        <i class="album-cover__icon fa fa-heart"></i>
-                        <i class="album-cover__icon fa fa-ban"></i>
-                    </div>
-                </div>
-                <div>
-                    <p class="album-cover__artist">Emile Almira, Lizzie Statham</p>
-                </div>
-            </div>
-        </div>
-        <div class="play-btns">
-            <ul class="play-btns__wrap play-btns__icon-box">
-                <li class="play-btns__list"><i class="play-btns__icon fa fa-random"></i></li>
-                <li class="play-btns__list"><i class="play-btns__icon fa fa-step-backward"></i></li>
-                <li class="play-btns__list"><i class="play-btns__icon fa fa-play-circle"></i></li>
-                <li class="play-btns__list"><i class="play-btns__icon fa fa-step-forward"></i></li>
-                <li class="play-btns__list"><i class="play-btns__icon fa fa-sync"></i></li>
-            </ul>
-            <ul class="play-btns__wrap play-btns__range-bar">
-                <li>
-                    <p>2:03</p>
-                </li>
-                <li class="play-btns__bar">
-                    <div>
-                        <input type="range" value="60" min="0" max="100">
-                    </div>
-                </li>
-                <li>
-                    <p>3:52</p>
-                </li>
-            </ul>
-        </div>
-        <div class="ect-btns">
-            <ul class="ect-btns__inner">
-                <li class="ect-btns__list"><i class="ect-btns__icon fa fa-list"></i></li>
-                <li class="ect-btns__list"><i class="ect-btns__icon fa fa-mobile-alt"></i></li>
-                <li class="ect-btns__list ect-btns__list--volume">
-                    <i class="ect-btns__icon fa fa-volume-up"></i>
-                    <div class="ect-btns__bar">
-                        <input type="range" value="100" min="0" max="100">
-                    </div>
-                </li>
-                <li class="ect-btns__list"><i class="ect-btns__icon fa fa-expand-alt"></i></li>
-            </ul>
         </div>
     </div>
 </div>
