--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -1,5 +1,5 @@
 
-<!-- <section class="section">
+<section class="section">
     <h2 class="title">Your top genres</h2>
     <div class="section--body">
         <div class="section--body--item section--body--item--lg category--item">
@@ -15,8 +15,8 @@
             </a>
         </div>
     </div>
-</section> -->
-<!-- <section class="section">
+</section>
+<section class="section">
     <h2 class="title">Browse all</h2>
     <div class="section--body">
         <div class="section--body--item category--item">
@@ -40,6 +40,6 @@
             </a>
         </div>
     </div>
-</section> -->
+</section>
 
 <app-page-album></app-page-album>
