--- a/src/app/shared/global-components/music-card/music-card.component.scss
+++ b/src/app/shared/global-components/music-card/music-card.component.scss
@@ -27,6 +27,7 @@
     border: 0;
     border-radius: 50%;
     background-color: #ece9e6;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     // animation: fadeIn linear 500ms;
     svg{
         font-size: 22px;
